@@ -65,20 +65,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <!-- JaCoCo Maven Plugin (inside the reporting section) -->
+    <!-- JaCoCo Maven Plugin (outside the build section) -->
     <reporting>
         <plugins>
-            <plugin>
+             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.10</version>
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <goals>
@@ -97,3 +94,4 @@
         </plugins>
     </reporting>
 </project>
+
